Add custom attribute and artifact